# LLM-toy

./: AGENTS.md  README.md  README_CN.md  fix_gpu_quick.sh  gpu_fix_guide.md  pyproject.toml  sample.ipynb  test_gpu.py
llm_toy/: OFFLINE_MODEL_GUIDE.md  OFFLINE_MODEL_SUMMARY.md  README.md  README_CN.md  demo_offline_fallback.py  main.py  test_offline_model.py
llm_toy/configs/: llm_api_config.json  training_config.json
llm_toy/data/: tiny_corpus.txt
llm_toy/notebooks/: 00_setup_troubleshooting.ipynb  01_pytorch_setup.ipynb  02_offline_llm_demo.ipynb  02_simple_llm_demo.ipynb  03_training_demo.ipynb  04_fine_tuning_demo.ipynb  05_attention_visualization.ipynb  06_tokenization_basics.ipynb  07_rag_intro.ipynb  08_evaluation_metrics.ipynb  99_post_gpu_fix.ipynb
llm_toy/src/: __init__.py  model.py  offline_model.py  online_model.py  trainer.py  utils.py
