[project]
name = "jupyterproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "numpy>=1.26",
    "seaborn>=0.13.2",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "datasets>=2.14.0",
    "tokenizers>=0.15.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.64.0",
    "wandb>=0.16.0",
]
